Fix dual scrollbars on the Help popup

--- a/JabbR/Chat.css
+++ b/JabbR/Chat.css
@@ -2220,6 +2220,7 @@ li.clearfix
 {
     overflow: auto;
     margin: 0 0 0 10px;
+    max-height: 430px;
 } 
 
 .command-list
